Bug #51
branding regression for boot menu
0%
Description
So when using onu, beadm copies over the old solaris.xpm in the grub config. Grub doesn't like this, because the file is removed.
We need to change beadm to search for and use a generic file, call it splash.xpm. It should override the splash configuration with that file name, and then distros can just simply use a hardlink or replace the file without having to touch code.
As a workaround, the grub menu can be explicitly changed to reference /boot/illumos.xpm, or the entry can just be removed.
Updated by Rich Lowe over 10 years ago
This is not onu specific, and occurs deep within libbe, the BE management library, it'll happen on any kind of upgrade.
Updated by Jay Jepkema over 10 years ago
After building Illumos I looked into this. It seems that beadm/libbe use the splashimage entry from the source BE when creating new entries. Other than it being added with bootadm, I have not yet found the source of the original entry.
Will look into this more. Hopefully I can be of some help.
Updated by Garrett D'Amore over 10 years ago
You're exactly correct, richlowe and I had already done the analysis.
I'll be fixing this later tonight. Stay tuned.
Updated by Garrett D'Amore over 10 years ago
- Status changed from New to Resolved
This was fixed some time ago. Although... splash.xpm has its own issues.