51 branding regression for boot menu Reviewed by: richlowe@richlowe.net Approved by: richlowe@richlowe.net

--HG--
rename : usr/src/uts/intel/os/illumos.xpm => usr/src/uts/intel/os/splashimage.xpm